--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,24 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>DBL v1 exp</title>
+	<title>DBL text editor</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
 <script>document.body.className += ' fade-out';</script>
+
+<div class="menu-div">
+	<h1>Digital Body Langauge</h1>
+	<ul>
+		<li><a href="chat.html" style="padding-right: 0px;" >chat</a></li>
+  		<li><a href="index.html" class="active">text editor</a></li>	
+ 	</ul>
+ </div>
+
 	<div class="content"> 
 		<div class="intro"> 
-			<h1>Digital Body Langauge test 1.2</h1>
 			<p>
 				Digital Body Language is a text processor created to explore how digital text can visually convey more of the users personal writing style and emotional state, as a part of the static text. Inspired by gestures from face-to-face interaction, we have explored abstractions of typing gesture within digital text.
 			</p>
@@ -29,27 +37,18 @@
 				 <button id="export-btn" class="hide">export csv</button>
 			</a>
 		</div>
-
-		
-		<div class ="chatcontainer">
-			<h1>Chat Box</h1>
-			<div class="chatbox">
-			</div> 
-		</div>
 	</div>
 
-<script type="text/javascript" src="js/domfunctions.js"></script>
+<script type="text/javascript" src="js/functions.js"></script>
+<script type="text/javascript" src="js/texteditor.js"></script>
 <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="http://api.jquery.com/resources/events.js"></script>
-<script type="text/javascript" src="js/functions.js"></script>
 <script type="text/javascript" src="js/DBL.js"></script>
 <script src="js/xepOnline.jqPlugin.js"></script>
 <script type="text/javascript">
 
-	var socket;
-	socket = io.connect('http://localhost:3000');
-	socket.on('messeage', newMsg);
+
 
 	courserFix();
 	var csvFile; 
