cleared all known bugs :)

--- a/public/chat.html
+++ b/public/chat.html
@@ -30,7 +30,7 @@
 		
 		<div class ="boxcontainer">
 			<h2>input text </h2>
-			<textarea id="inputText" class="textBox" contenteditable="true"></textarea>
+			<textarea id="inputText" class="textBox chatinput" contenteditable="true"></textarea>
 			<button id="send">send</button>
 		</div>
 
