--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 		</div>
 		<div class ="boxcontainer">
 			<h2>input text </h2>
-			<textarea id="inputText" class="textBox" contenteditable="true"></textarea>
+			<textarea id="inputText" class="textBox" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" contenteditable="true"></textarea>
 			<button id="render">render</button>
 		</div>
 		<div class ="boxcontainer">	
