created interface prototype

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
 <div class="menu-div">
 	<h1>Digital Body Langauge</h1>
 	<ul>
-		<li><a href="chat.html" style="padding-right: 0px;" >chat</a></li>
+		<li><a href="interface.html" style="padding-right: 0px;" >interface</a></li>
+		<li><a href="chat.html">chat</a></li>
   		<li><a href="index.html" class="active">text editor</a></li>	
  	</ul>
  </div>
