--- a/public/interface.html
+++ b/public/interface.html
@@ -11,6 +11,7 @@
 <body>
 
 
+<!-- FIRST SCREEN -->
 <div class = "headercontainer">
 	<div class="menu-div">
 			<ul>
@@ -26,33 +27,36 @@
 </div>
 
 
+<!-- SECOND SCREEN -->
+<div id="screen1" class ="contentcontainer">
+	<h2 id="screen1_1"></h2>
+	<form>
+		 <input autocomplete="off" type="text" id="input_1" name="yes/no">
+	</form>
 
-<div id="div1" class="contentcontainer">
-	<div id ="intro" class="text-section">
-		<h2 id="introstart" class="divider"></h2>
-		<p id="introtext"></p>
-		<h2 id="introend"></h2>	
-	
-		<p id="continued"></p>	
-		<form>
-			 <input autocomplete="off" type="text" id="fname" name="yes/no">
-		</form>
-	</div>
+	<h2 id="screen1_2"></h2>
+	<form>
+		 <input autocomplete="off" type="text" id="input_2" name="yes/no">
+	</form>
+
+	<h2 id="screen1_3"> </h2>
+	<form>
+		 <input autocomplete="off" type="text" id="input_3" name="yes/no">
+	</form>
+</div>
+
+<!-- THIRD SCREEN -->
+<div id="screen2" class ="contentcontainer">
+	<h2 id="screen2_2"></h2>
+	<form>
+		 <input autocomplete="off" type="text" id="input_1" name="yes/no">
+	</form>
+</div>
 
 
-	<div id="decision" class="text-section">
-		<h2 id="decisionintro"></h2>
-		<p id="decisiontext"></p>
-		<h2 id="decisionend"></h2>
-		<p id="getquestion"></p>	
-		<form>
-			 <input autocomplete="off" type="text" id="fname2" name="yes/no">
-		</form>
-	</div>
-
-	<div class="text-section">
-		<h2 id="question"></h2>
-	</div>
+<div class="text-section">
+	<h2 id="question"></h2>
+</div>
 
 	<!--  DBL CONTENT -->
 
