new interface done

--- a/public/interface.html
+++ b/public/interface.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>DBL text interface</title>
+	<title>DIGITAL BODY LANGAUGE</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Overpass+Mono" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style/interface.css">
 </head>
 
@@ -46,6 +47,7 @@
 
 	<div class="section3">
 		<h2 id="screen1_3"></h2>
+		<h2 id="screen1_3_5" style="display:none;" ></h2>
 		<form>
 			 <input autocomplete="off" type="text" id="input_3" class="inputfield" name="yes/no" onkeypress="return event.keyCode != 13">
 		</form>
@@ -53,6 +55,7 @@
 
 	<div class="section4">
 		<h2 id="screen2_1"></h2>
+		<h2 id="screen2_1_5" style="display:none;"></h2>
 		<form>
 			 <input autocomplete="off" type="text" id="input_4" class="inputfield" name="yes/no" onkeypress="return event.keyCode != 13">
 		</form>
