--- a/DBL_Nordic_CHI/public/index.html
+++ b/DBL_Nordic_CHI/public/index.html
@@ -9,27 +9,30 @@
 
 </head>
 	<body>
-		<h1 class="logo-text"> DIGITAL BODY LANGUAGE </h1>
+		<h1 class="logo-text"> DIGITAL BODY LANGUAGE </h1>	
 		<div class="content">
-			<p class="conversation-bot" id="para-1"></p>
-			<textarea class="chat-input" autofocus="true" spellcheck="false" autocomplete="off" rows="1" wrap="hard" class="conversation-human"></textarea>
+			<h2 class="conversation-style" id="para-1"></h2>
+			<textarea class="chat-input conversation-style blue" autofocus="true" spellcheck="false" autocomplete="off" rows="1" wrap="hard"></textarea>
 
-			<p class="conversation-bot" id="para-2"></p>
-			<textarea class="chat-input" autofocus="true" spellcheck="false" autocomplete="off" rows="1" wrap="hard" class="conversation-human"></textarea>
+			<h2 class="conversation-style" id="para-2"></h2>
+			<textarea class="chat-input conversation-style" autofocus="true" spellcheck="false" autocomplete="off" rows="1" wrap="hard"></textarea>
 
-			<p class="conversation-bot" id="para-3"></p>
-			<textarea class="chat-input" autofocus="true" spellcheck="false" autocomplete="off" rows="1" wrap="hard" class="conversation-human"></textarea>
+			<h2 class="conversation-style" id="para-3"></h2>
+			<textarea class="chat-input conversation-style" autofocus="true" spellcheck="false" autocomplete="off" rows="1" wrap="hard"></textarea>
 		</div>
 
 		<div class="text-processer">
-			<p class="conversation-bot"><span id="question"></span><br><b><span id="question-para"></span></b></p>
-			<p class="meta-text hidden">Dont like the question?<br> Use the arrow keys to change the question.</p>
+			<h2 class="conversation-style grey">Question</h2>
+			<h2 class="conversation-style" id="question"></h2>
+			<p class="metatext-style hidden meta-quest">Dont like the question?<br> Use the arrow keys to change the question.</p>
 			<div class="input-div hidden">
+				<p class="indication metatext-style"> Write at least until here -----</p>
 				<textarea id="inputText" class="input-field textBox" placeholder="Write your answer here..." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" contenteditable="false"></textarea>	
+
 			</div>
 		</div>
 		<div class="output-wrapper">
-			<p class="meta-text">Your digital body language</p>
+			<p class="metatext-style absolute">Your digital body language</p>
 			<div class="output-innerwrapper">
 				<div id="outputText" class="textBox"> </div> 
 			</div>
@@ -39,22 +42,28 @@
 	<script type="text/javascript" src="js/libraries/autoResize.js"></script>
 
 	<script type="text/javascript" src="js/functions.js"></script>
-	<script type="text/javascript" src="js/texteditor.js"></script>
 	<script type="text/javascript" src="js/texts.js"></script>
 	<script type="text/javascript" src="js/interface.js"></script>
 	<script type="text/javascript" src="js/DBL.js"></script>
+	<script type="text/javascript" src="js/texteditor.js"></script>
 	<script type="text/javascript">
 		
 		//init socket and make handshake with server
 		var socket = io.connect('http://localhost:8000');
-		socket.emit('msg', "hello server");
+		socket.emit('msg', "hello");
 		socket.on('msg', function(data){
 			console.log(data);
 		});	
 
-		courserFix(); //disable curser in editor
+		//Global variables 
+		var name = "name";
+		var currentQuestion = questions[0];
+		var choosedQuestion = false;
 		var csvFile;
 		var values = []; // make values global 
+
+		//disable curser in editor
+		courserFix();
 		$(document).ready(function(){
 			$('.chat-input').autoResize();
 		})
